; ModuleID = '/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target_util.c_iscsit_add_cmd_to_response_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/target/iscsi/extr_iscsi_target_util.c_iscsit_add_cmd_to_response_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iscsi_cmd = type { i32 }
%struct.iscsi_conn = type { i32, i32, i32 }
%struct.iscsi_queue_req = type { i32, i32, %struct.iscsi_cmd* }

@lio_qr_cache = common dso_local global i32 0, align 4
@GFP_ATOMIC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"Unable to allocate memory for struct iscsi_queue_req\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iscsit_add_cmd_to_response_queue(%struct.iscsi_cmd* %0, %struct.iscsi_conn* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.iscsi_cmd*, align 8
  %6 = alloca %struct.iscsi_conn*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.iscsi_queue_req*, align 8
  store %struct.iscsi_cmd* %0, %struct.iscsi_cmd** %5, align 8
  store %struct.iscsi_conn* %1, %struct.iscsi_conn** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* @lio_qr_cache, align 4
  %10 = load i32, i32* @GFP_ATOMIC, align 4
  %11 = call %struct.iscsi_queue_req* @kmem_cache_zalloc(i32 %9, i32 %10)
  store %struct.iscsi_queue_req* %11, %struct.iscsi_queue_req** %8, align 8
  %12 = load %struct.iscsi_queue_req*, %struct.iscsi_queue_req** %8, align 8
  %13 = icmp ne %struct.iscsi_queue_req* %12, null
  br i1 %13, label %18, label %14

14:                                               ; preds = %3
  %15 = call i32 @pr_err(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @ENOMEM, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %4, align 4
  br label %45

18:                                               ; preds = %3
  %19 = load %struct.iscsi_queue_req*, %struct.iscsi_queue_req** %8, align 8
  %20 = getelementptr inbounds %struct.iscsi_queue_req, %struct.iscsi_queue_req* %19, i32 0, i32 0
  %21 = call i32 @INIT_LIST_HEAD(i32* %20)
  %22 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %5, align 8
  %23 = load %struct.iscsi_queue_req*, %struct.iscsi_queue_req** %8, align 8
  %24 = getelementptr inbounds %struct.iscsi_queue_req, %struct.iscsi_queue_req* %23, i32 0, i32 2
  store %struct.iscsi_cmd* %22, %struct.iscsi_cmd** %24, align 8
  %25 = load i32, i32* %7, align 4
  %26 = load %struct.iscsi_queue_req*, %struct.iscsi_queue_req** %8, align 8
  %27 = getelementptr inbounds %struct.iscsi_queue_req, %struct.iscsi_queue_req* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load %struct.iscsi_conn*, %struct.iscsi_conn** %6, align 8
  %29 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %28, i32 0, i32 1
  %30 = call i32 @spin_lock_bh(i32* %29)
  %31 = load %struct.iscsi_queue_req*, %struct.iscsi_queue_req** %8, align 8
  %32 = getelementptr inbounds %struct.iscsi_queue_req, %struct.iscsi_queue_req* %31, i32 0, i32 0
  %33 = load %struct.iscsi_conn*, %struct.iscsi_conn** %6, align 8
  %34 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %33, i32 0, i32 2
  %35 = call i32 @list_add_tail(i32* %32, i32* %34)
  %36 = load %struct.iscsi_cmd*, %struct.iscsi_cmd** %5, align 8
  %37 = getelementptr inbounds %struct.iscsi_cmd, %struct.iscsi_cmd* %36, i32 0, i32 0
  %38 = call i32 @atomic_inc(i32* %37)
  %39 = load %struct.iscsi_conn*, %struct.iscsi_conn** %6, align 8
  %40 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %39, i32 0, i32 1
  %41 = call i32 @spin_unlock_bh(i32* %40)
  %42 = load %struct.iscsi_conn*, %struct.iscsi_conn** %6, align 8
  %43 = getelementptr inbounds %struct.iscsi_conn, %struct.iscsi_conn* %42, i32 0, i32 0
  %44 = call i32 @wake_up(i32* %43)
  store i32 0, i32* %4, align 4
  br label %45

45:                                               ; preds = %18, %14
  %46 = load i32, i32* %4, align 4
  ret i32 %46
}

declare dso_local %struct.iscsi_queue_req* @kmem_cache_zalloc(i32, i32) #1

declare dso_local i32 @pr_err(i8*) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @atomic_inc(i32*) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
